Fix hero alignment on small screens

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background-color: govuk-colour("magenta", $variant: "primary");
-  padding: 70px 15px;
+  padding: 70px 0;
   &__heading {
     color: #fff;
     & span {
